[gd_scene load_steps=2 format=3 uid="uid://dxmbr0f6s731f"]

[ext_resource type="Script" uid="uid://clqlbm77kthd5" path="res://battle_screen/skill_view_panel.gd" id="1_8nxnf"]

[node name="SkillViewPanel" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8nxnf")

[node name="TextureRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(400, 180)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = 2.0
offset_right = 402.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7294118)

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SkillName" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Skill Name"

[node name="Cost" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Energy Cost: "

[node name="CostBox" type="HBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "rzrhzrhzrhzrh"

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Classes" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Classes: "

[node name="Cooldown" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Cooldown: "
